service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-app-service
  namespace: m
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 8000
      targetPort: http
  type: ClusterIP
